# py-meteokit

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
meteokit/: __init__.py
meteokit.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_meteokit.py
